-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.11, 5.12.0, 5.12.1
-
None
-
-
91547ffff449af7e9d5be78768101b02c0d63d0d (qt/qtwayland/5.12)
file:
qt5/qtwayland/src/compositor/compositor_api/qwaylandcompositor.h
There are unimplemented function declarations QWaylandCompositor::createSurfaceView
QWaylandView *createSurfaceView(QWaylandSurface *surface);
| For Gerrit Dashboard: QTBUG-73070 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 250196,2 | Remove unimplemented QWaylandCompositor::createSurfaceView | 5.12 | qt/qtwayland | Status: MERGED | +2 | 0 |