Remove unimplemented QWaylandCompositor::createSurfaceView

Seems like it was just a left behind by mistake in fffa0f76 back in 2011.

Fixes: QTBUG-73070
Change-Id: I3055d2c72cd6752de9917d765684ff049c0dbc6c
Reviewed-by: Pier Luigi Fiorini <pierluigi.fiorini@liri.io>